--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -19,10 +19,18 @@ jobs:
     - name: Set up Go
       uses: actions/setup-go@v4
       with:
-        go-version: '1.23'
+        go-version: '1.24.x'
+
+    - name: Install golangci-lint
+      uses: golangci/golangci-lint-action@v6
+      with:
+        version: v1.64.4
 
     - name: Build
-      run: cd ./backend && make build
+      run: make build
 
     - name: Test
-      run: cd ./backend && make test
+      run: make test
+
+    - name: Lint
+      run: make lint
